2001-02-07 18:25 GMT+1 Antonio Linares <alinares@alinares.com>
   * harbour/source/debug/dbgtarr.prg
     ! some minor fixes.

2001-02-07 18:21 GMT+1 Antonio Linares <alinares@alinares.com>
   * harbour/source/debug/debugger.prg
     + Implementing statics variables support (not finished yet).

   * harbour/source/vm/hvm.c
     ! HB_P_STATICNAME improved support

   Notice: Not finished yet!

2001-02-07 13:50 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * harbour/source/pp/ppcore.c
     * now pp gives error if '<' haven't matched '>' .

2001-02-07 10:30 GMT+1 Ignacio Ortiz <ignacioortiz@fivetech.com>
   * harbour/source/debug/dbgtmenu.prg
     + Accelerator keys on popup menus fixed.

   * harbour/source/debug/tbrwtext.prg
     + Wrong comment on search method.

2001-02-06 23:57 GMT+1 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/tbrowse.prg
     + added ::MGotoYX(nRow, nCol) method which hilights cell under screen coordinates nRow, nCol
     should help following a mouse. NOTE: hacked up and not tested. I'm very busy at the moment.
     * NOTE latest change to TBrowse (my previous entry in changelog) fixed a problem but created
     a new one :-) I'll have to rethink a little bit ::Stabilize() logic.

2001-02-06 20:30 GMT+1 Ignacio Ortiz <ignacioortiz@fivetech.com>
   * harbour/source/debug/dbgmenu.prg
     + Debugger full locate menu support.

   * harbour/source/debug/tbrwtext.prg
     + New search method

   * harbour/source/debug/debugger.prg
     + Debugger full locate menu support.

2001-02-06 17:47 GMT+1 Antonio Linares <alinares@fivetech.com>
   * harbour/source/debug/dbgtmenu.prg
     + debugger colors selection support.

   * harbour/source/debug/dbgmenu.prg
     + call to debugger SelColors() option.

   * harbour/source/debug/dbgtwin.prg
     + debugger colors selection support.

   * harbour/source/debug/debugger.prg
     + colors selection option implemented

     Notice: Not finished yet.
