@@ -1,3 +1,8 @@
+2001-02-07 17:15 UTC-0500 David G. Holm <dholm@jsd-llc.com>
+  * source/rtl/gtwin/gtwin.c
+    ! Improved handling of international characters and keyboards,
+      which my earlier fix for supporting Alt+alpha-numeric broke.
+
 2001-02-07 18:25 GMT+1 Antonio Linares <alinares@alinares.com>
    * harbour/source/debug/dbgtarr.prg
      ! some minor fixes.
